Deployment Dev.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: apps-attribution-service
  name: apps-attribution-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: apps-attribution-service
  ports:
    - name: https-attribution-service
      protocol: TCP
      port: 4005
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-attribution-service
  labels:
    app: apps-attribution-service
    tags.datadoghq.com/env: dev
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:262453618077:certificate/30302bd3-162d-44e8-adce-0c2b6b0ea331
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '10'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/success-codes: '200'
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apps-attribution-service
                port:
                  number: 4005
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apps-attribution-service
  labels:
    app: apps-attribution-service
    tags.datadoghq.com/env: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apps-attribution-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: apps-attribution-service
        tags.datadoghq.com/env: 'dev'
        tags.datadoghq.com/service: 'attribution-service'
        tags.datadoghq.com/version: '1.0.0'
        admission.datadoghq.com/enabled: 'true'
      annotations:
        admission.datadoghq.com/js-lib.version: v3.19.0
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: apps-attribution-service
          image: ghcr.io/resilience-lab/resilience-platform/attribution-service-dev
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /health
              port: 4005
            initialDelaySeconds: 45
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          readinessProbe:
            httpGet:
              path: /health
              port: 4005
            initialDelaySeconds: 45
            timeoutSeconds: 5
            periodSeconds: 10
            failureThreshold: 6
      imagePullSecrets:
        - name: ghcr-login-secret
